small modification to our web page

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>Hey There</h1>
+        <h1>Hey There! this is the best web development course I've ever learned !</h1>
     </body>
 </html>
